--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "d3": "^7.9.0",
     "firebase": "^10.11.1",
     "formik": "^2.4.6",
+    "html2canvas": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0",
