--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,10 @@
     "animate.css": "^4.1.1",
     "axios": "^1.6.8",
     "d3": "^7.9.0",
+    "downloadjs": "^1.4.7",
     "firebase": "^10.11.1",
     "formik": "^2.4.6",
+    "html-to-image": "^1.11.11",
     "html2canvas": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
